	- fix build with C89 compilers
	- fix issues related to visibility attributes
	- fix compatibility with old gcc, mingw, djgpp
	- fix warnings in configure script
	- fix Watcom C build on OS/2
	Changes by Carsten Teibes:
	- fix lite build mod loader symbols
	Changes by NoSuck:
	- fix IT message length
	Other changes:
	- fix double free in case of ADPCM sample load error

4.4.1 (20161012):
	Fix issues reported by Saga Musix:
	- fix MDL c5spd to preserve base periods
	- fix MDL sample decoder loop with corrupted data
	- fix MASI loader OPLH and PPAN subchunks parsing
	Other changes:
	- fix MacOS Tiger build issues (reported by Misty De Meo)
	- fix sample loop corner case (reported by knight-ryu12)
	- fix set pan effect in multichannel MODs (reported by Leilei)
	- fix global volume on module loop (reported by Travis Evans)
	- fix IT pan right value (by NoSuck)
	- fix MASI effects based on OpenMPT PSM loader
	- fix memory leak in XMs with 256 patterns
	- fix anticlick when rendering only one sample
	- fix anticlick in His Master's Noise instruments
	- fix anticlick in MED synth instruments

4.4.0 (20160719):
	Fix bugs caught in the OpenMPT test cases:
	- fix XM arpeggio in FastTracker 2 compatible mode
	- fix IT bidirectional loop sample length
	- fix MOD vibrato and tremolo in Protracker compatible mode
	Fix multichannel MOD issues reported by Leilei:
	- fix XM replayer note delay and retrig quirk
	- fix XM replayer channel pan
	- fix MOD loader period to note conversion
	Fix issues reported by Lionel Debroux:
	- fix virtual channel deallocation error handling
	- fix S3M global volume effect
	- fix IT envelope reset on tone portamento
	- fix IT voice leak caused by disabled envelope
	- fix IT volume column tone portamento
	- fix XM envelope position setting
	- fix FT2 arpeggio+portamento quirk with finetunes
	- fix mixer anticlick routines
	- accept S3M modules with invalid effects
	Fix issues reported by Saga Musix: